// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalActions sample snapshot testing Global Section Actions 1`] = `
<div>
  <div
    class="HvGlobalActions-root"
  >
    <div
      class="HvGlobalActions-wrapper HvGlobalActions-globalSectionArea"
    >
      <h2
        class="HvGlobalActions-name HvTypography-root HvTypography-sectionTitle"
      >
        Section Title
      </h2>
      <div
        class="HvGlobalActions-actions"
      >
        <button
          class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-contained MuiButton-containedPrimary HvButton-primary MuiButton-sizeMedium MuiButton-containedSizeMedium HvButton-primarySVG css-1gsq1hj-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Primary
        </button>
        <div
          class="HvBaseDropdown-root HvDropDownMenu-root"
        >
          <div
            aria-expanded="false"
            aria-haspopup="menu"
            aria-label="dropdownMenu-Items"
            class="HvDropDownMenu-container HvBaseDropdown-anchor"
            id="dropdownItem-5"
            tabindex="-1"
          >
            <button
              aria-expanded="false"
              aria-label="Dropdown menu"
              class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text MuiButton-textPrimary HvButton-ghost MuiButton-sizeMedium MuiButton-textSizeMedium HvDropDownMenu-icon HvButton-icon HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
              id="dropdownItem-5-icon-button"
              tabindex="0"
              type="button"
            >
              <div
                class="HvIconBase-root HvIconBase-s"
                name="MoreOptionsVertical"
              >
                <svg
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="color0"
                    d="M7 6.9h2v2H7zM7 4h2V2H7zm0 10h2v-2H7z"
                    fill="#414141"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GlobalActions sample snapshot testing Main 1`] = `
<div>
  <div
    class="MuiContainer-root HvContainer-root MuiContainer-maxWidthXl css-1d4akpq-MuiContainer-root"
  >
    <div
      class="HvGlobalActions-root HvGlobalActions-positionSticky HvGlobalActions-global"
    >
      <div
        class="HvGlobalActions-wrapper HvGlobalActions-globalWrapperComplement"
      >
        <div
          class="HvGlobalActions-backButton"
        >
          <button
            aria-label="Back"
            class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text MuiButton-textPrimary HvButton-ghost MuiButton-sizeMedium MuiButton-textSizeMedium HvButton-icon HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <div
              class="HvIconBase-root HvIconBase-s"
              name="Backwards"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M11.30863 15.5L4 8 11.30863.5 12 1.30536 5.38272 8 12 14.79529z"
                  fill="#414141"
                />
              </svg>
            </div>
          </button>
        </div>
        <h1
          class="HvGlobalActions-name HvTypography-root HvTypography-xsTitle"
        >
          Detail Page Title
        </h1>
        <div
          class="HvGlobalActions-actions"
        >
          <button
            class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-contained MuiButton-containedPrimary HvButton-primary MuiButton-sizeMedium MuiButton-containedSizeMedium HvButton-primarySVG css-1gsq1hj-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Approve & Share
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-outlined MuiButton-outlinedPrimary HvButton-secondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium HvButton-secondarySVG css-ci0f3d-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Reset
          </button>
          <div
            class="HvBaseDropdown-root HvDropDownMenu-root"
          >
            <div
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="dropdownMenu-Items"
              class="HvDropDownMenu-container HvBaseDropdown-anchor"
              id="dropdownItem-1"
              tabindex="-1"
            >
              <button
                aria-expanded="false"
                aria-label="Dropdown menu"
                class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text MuiButton-textPrimary HvButton-ghost MuiButton-sizeMedium MuiButton-textSizeMedium HvDropDownMenu-icon HvButton-icon HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
                id="dropdownItem-1-icon-button"
                tabindex="0"
                type="button"
              >
                <div
                  class="HvIconBase-root HvIconBase-s"
                  name="MoreOptionsVertical"
                >
                  <svg
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      class="color0"
                      d="M7 6.9h2v2H7zM7 4h2V2H7zm0 10h2v-2H7z"
                      fill="#414141"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="padding-bottom: 60px;"
    >
      <div
        class="HvGlobalActions-root"
      >
        <div
          class="HvGlobalActions-wrapper HvGlobalActions-globalSectionArea"
        >
          <h2
            class="HvGlobalActions-name HvTypography-root HvTypography-sectionTitle"
          >
            Section Title
          </h2>
          <div
            class="HvGlobalActions-actions"
          >
            <button
              class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-outlined MuiButton-outlinedPrimary HvButton-secondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium HvButton-secondarySVG css-ci0f3d-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Remove
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-outlined MuiButton-outlinedPrimary HvButton-secondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium HvButton-secondarySVG css-ci0f3d-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Share
            </button>
            <div
              class="HvBaseDropdown-root HvDropDownMenu-root"
            >
              <div
                aria-expanded="false"
                aria-haspopup="menu"
                aria-label="dropdownMenu-Items"
                class="HvDropDownMenu-container HvBaseDropdown-anchor"
                id="dropdownItem-2"
                tabindex="-1"
              >
                <button
                  aria-expanded="false"
                  aria-label="Dropdown menu"
                  class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text MuiButton-textPrimary HvButton-ghost MuiButton-sizeMedium MuiButton-textSizeMedium HvDropDownMenu-icon HvButton-icon HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
                  id="dropdownItem-2-icon-button"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="HvIconBase-root HvIconBase-s"
                    name="MoreOptionsVertical"
                  >
                    <svg
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="color0"
                        d="M7 6.9h2v2H7zM7 4h2V2H7zm0 10h2v-2H7z"
                        fill="#414141"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        class="HvTypography-root HvTypography-normalText"
        style="margin-top: 20px; margin-bottom: 30px;"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed. Tortor at risus viverra adipiscing at in tellus. Et netus et malesuada fames ac turpis. Sed blandit libero volutpat sed cras ornare arcu. Arcu odio ut sem nulla pharetra diam sit amet. Sagittis purus sit amet volutpat consequat mauris nunc congue. Sed vulputate mi sit amet mauris commodo quis imperdiet massa. Dictum varius duis at consectetur. Lorem sed risus ultricies tristique nulla aliquet enim tortor at. Turpis egestas maecenas pharetra convallis posuere morbi. Eget sit amet tellus cras adipiscing. Egestas erat imperdiet sed euismod nisi. Morbi tincidunt augue interdum velit euismod in pellentesque massa. At augue eget arcu dictum varius duis at. Tellus elementum sagittis vitae et. In est ante in nibh mauris cursus mattis. Faucibus nisl tincidunt eget nullam non. Cursus metus aliquam eleifend mi in nulla posuere.
      </p>
      <p
        class="HvTypography-root HvTypography-normalText"
        style="margin-bottom: 60px;"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed. Tortor at risus viverra adipiscing at in tellus. Et netus et malesuada fames ac turpis. Sed blandit libero volutpat sed cras ornare arcu. Arcu odio ut sem nulla pharetra diam sit amet. Sagittis purus sit amet volutpat consequat mauris nunc congue. Sed vulputate mi sit amet mauris commodo quis imperdiet massa. Dictum varius duis at consectetur. Lorem sed risus ultricies tristique nulla aliquet enim tortor at. Turpis egestas maecenas pharetra convallis posuere morbi. Eget sit amet tellus cras adipiscing. Egestas erat imperdiet sed euismod nisi. Morbi tincidunt augue interdum velit euismod in pellentesque massa. At augue eget arcu dictum varius duis at. Tellus elementum sagittis vitae et. In est ante in nibh mauris cursus mattis. Faucibus nisl tincidunt eget nullam non. Cursus metus aliquam eleifend mi in nulla posuere.
      </p>
      <div
        class="HvGlobalActions-root"
      >
        <div
          class="HvGlobalActions-wrapper HvGlobalActions-globalSectionArea"
        >
          <h2
            class="HvGlobalActions-name HvTypography-root HvTypography-sectionTitle"
          >
            Section Title
          </h2>
          <div
            class="HvGlobalActions-actions"
          >
            <button
              class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-outlined MuiButton-outlinedPrimary HvButton-secondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium HvButton-secondarySVG css-ci0f3d-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Remove
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-outlined MuiButton-outlinedPrimary HvButton-secondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium HvButton-secondarySVG css-ci0f3d-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Share
            </button>
            <div
              class="HvBaseDropdown-root HvDropDownMenu-root"
            >
              <div
                aria-expanded="false"
                aria-haspopup="menu"
                aria-label="dropdownMenu-Items"
                class="HvDropDownMenu-container HvBaseDropdown-anchor"
                id="dropdownItem-3"
                tabindex="-1"
              >
                <button
                  aria-expanded="false"
                  aria-label="Dropdown menu"
                  class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text MuiButton-textPrimary HvButton-ghost MuiButton-sizeMedium MuiButton-textSizeMedium HvDropDownMenu-icon HvButton-icon HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
                  id="dropdownItem-3-icon-button"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="HvIconBase-root HvIconBase-s"
                    name="MoreOptionsVertical"
                  >
                    <svg
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="color0"
                        d="M7 6.9h2v2H7zM7 4h2V2H7zm0 10h2v-2H7z"
                        fill="#414141"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        class="HvTypography-root HvTypography-normalText"
        style="margin-top: 20px; margin-bottom: 30px;"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed. Tortor at risus viverra adipiscing at in tellus. Et netus et malesuada fames ac turpis. Sed blandit libero volutpat sed cras ornare arcu. Arcu odio ut sem nulla pharetra diam sit amet. Sagittis purus sit amet volutpat consequat mauris nunc congue. Sed vulputate mi sit amet mauris commodo quis imperdiet massa. Dictum varius duis at consectetur. Lorem sed risus ultricies tristique nulla aliquet enim tortor at. Turpis egestas maecenas pharetra convallis posuere morbi. Eget sit amet tellus cras adipiscing. Egestas erat imperdiet sed euismod nisi. Morbi tincidunt augue interdum velit euismod in pellentesque massa. At augue eget arcu dictum varius duis at. Tellus elementum sagittis vitae et. In est ante in nibh mauris cursus mattis. Faucibus nisl tincidunt eget nullam non. Cursus metus aliquam eleifend mi in nulla posuere.
      </p>
      <p
        class="HvTypography-root HvTypography-normalText"
        style="margin-bottom: 60px;"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed. Tortor at risus viverra adipiscing at in tellus. Et netus et malesuada fames ac turpis. Sed blandit libero volutpat sed cras ornare arcu. Arcu odio ut sem nulla pharetra diam sit amet. Sagittis purus sit amet volutpat consequat mauris nunc congue. Sed vulputate mi sit amet mauris commodo quis imperdiet massa. Dictum varius duis at consectetur. Lorem sed risus ultricies tristique nulla aliquet enim tortor at. Turpis egestas maecenas pharetra convallis posuere morbi. Eget sit amet tellus cras adipiscing. Egestas erat imperdiet sed euismod nisi. Morbi tincidunt augue interdum velit euismod in pellentesque massa. At augue eget arcu dictum varius duis at. Tellus elementum sagittis vitae et. In est ante in nibh mauris cursus mattis. Faucibus nisl tincidunt eget nullam non. Cursus metus aliquam eleifend mi in nulla posuere.
      </p>
      <div
        class="HvGlobalActions-root"
      >
        <div
          class="HvGlobalActions-wrapper HvGlobalActions-globalSectionArea"
        >
          <h2
            class="HvGlobalActions-name HvTypography-root HvTypography-sectionTitle"
          >
            Section Title
          </h2>
          <div
            class="HvGlobalActions-actions"
          >
            <button
              class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-outlined MuiButton-outlinedPrimary HvButton-secondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium HvButton-secondarySVG css-ci0f3d-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Remove
            </button>
            <button
              class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-outlined MuiButton-outlinedPrimary HvButton-secondary MuiButton-sizeMedium MuiButton-outlinedSizeMedium HvButton-secondarySVG css-ci0f3d-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Share
            </button>
            <div
              class="HvBaseDropdown-root HvDropDownMenu-root"
            >
              <div
                aria-expanded="false"
                aria-haspopup="menu"
                aria-label="dropdownMenu-Items"
                class="HvDropDownMenu-container HvBaseDropdown-anchor"
                id="dropdownItem-4"
                tabindex="-1"
              >
                <button
                  aria-expanded="false"
                  aria-label="Dropdown menu"
                  class="MuiButtonBase-root MuiButton-root HvButton-root MuiButton-text MuiButton-textPrimary HvButton-ghost MuiButton-sizeMedium MuiButton-textSizeMedium HvDropDownMenu-icon HvButton-icon HvButton-ghostSVG css-fsero8-MuiButtonBase-root-MuiButton-root"
                  id="dropdownItem-4-icon-button"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="HvIconBase-root HvIconBase-s"
                    name="MoreOptionsVertical"
                  >
                    <svg
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="color0"
                        d="M7 6.9h2v2H7zM7 4h2V2H7zm0 10h2v-2H7z"
                        fill="#414141"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        class="HvTypography-root HvTypography-normalText"
        style="margin-top: 20px; margin-bottom: 30px;"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed. Tortor at risus viverra adipiscing at in tellus. Et netus et malesuada fames ac turpis. Sed blandit libero volutpat sed cras ornare arcu. Arcu odio ut sem nulla pharetra diam sit amet. Sagittis purus sit amet volutpat consequat mauris nunc congue. Sed vulputate mi sit amet mauris commodo quis imperdiet massa. Dictum varius duis at consectetur. Lorem sed risus ultricies tristique nulla aliquet enim tortor at. Turpis egestas maecenas pharetra convallis posuere morbi. Eget sit amet tellus cras adipiscing. Egestas erat imperdiet sed euismod nisi. Morbi tincidunt augue interdum velit euismod in pellentesque massa. At augue eget arcu dictum varius duis at. Tellus elementum sagittis vitae et. In est ante in nibh mauris cursus mattis. Faucibus nisl tincidunt eget nullam non. Cursus metus aliquam eleifend mi in nulla posuere.
      </p>
      <p
        class="HvTypography-root HvTypography-normalText"
        style="margin-bottom: 30px;"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed. Tortor at risus viverra adipiscing at in tellus. Et netus et malesuada fames ac turpis. Sed blandit libero volutpat sed cras ornare arcu. Arcu odio ut sem nulla pharetra diam sit amet. Sagittis purus sit amet volutpat consequat mauris nunc congue. Sed vulputate mi sit amet mauris commodo quis imperdiet massa. Dictum varius duis at consectetur. Lorem sed risus ultricies tristique nulla aliquet enim tortor at. Turpis egestas maecenas pharetra convallis posuere morbi. Eget sit amet tellus cras adipiscing. Egestas erat imperdiet sed euismod nisi. Morbi tincidunt augue interdum velit euismod in pellentesque massa. At augue eget arcu dictum varius duis at. Tellus elementum sagittis vitae et. In est ante in nibh mauris cursus mattis. Faucibus nisl tincidunt eget nullam non. Cursus metus aliquam eleifend mi in nulla posuere.
      </p>
    </div>
  </div>
</div>
`;
